Travis compiles with g++-5

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
 
 script: 
-  - cmake CMakeLists.txt
+  - cmake -D CMAKE_C_COMPILER=gcc-5 -D CMAKE_CXX_COMPILER=g++-5 CMakeLists.txt
   - make
   - ./travis_cmake_gcc_cpp14
