--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,9 @@
-sudo: require
-language: generic
+language: cpp
+dist: xenial
 compiler: gcc
-dist: trusty
-
-before_install:
-  # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
-install: 
-  # C++14
-  - sudo apt-get install -qq g++-5
-  # g++ should call g++-5
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
 
 script: 
-  - cmake -D CMAKE_C_COMPILER=gcc-5 -D CMAKE_CXX_COMPILER=g++-5 CMakeLists.txt
+  - cmake CMakeLists.txt
+  #- cmake -D CMAKE_C_COMPILER=gcc-5 -D CMAKE_CXX_COMPILER=g++-5 CMakeLists.txt
   - make
   - ./travis_cmake_gcc_cpp14
