--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: xenial
 compiler: gcc
 
 script: 
-  - cmake CMakeLists.txt
-  #- cmake -D CMAKE_C_COMPILER=gcc-5 -D CMAKE_CXX_COMPILER=g++-5 CMakeLists.txt
+  - cmake .
   - make
   - ./travis_cmake_gcc_cpp14
